remove args from maven release plugin